--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -123,9 +123,9 @@
         <mat-card>
           <div class="form-check">
             <input [(ngModel)]="isActive" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-            <!-- <input [(ngModel)]="isActive" type="checkbox"> -->
+            <input [(ngModel)]="isActive" type="checkbox"> -->
             <!-- <mat-checkbox [(ngModel)]="isActive"> -->
-            <label class="form-check-label" for="flexCheckDefault">
+            <!-- <label class="form-check-label" for="flexCheckDefault">
               Confirmed and verified
             </label>
           </div>
@@ -138,7 +138,7 @@
     </div>
   
 </mat-grid-tile>
-</mat-grid-list> -->
+</mat-grid-list> --> -->
 
 
 
