--- a/product-webapp/webapp/src/app/components/doctor-dashboard/doctor-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/doctor-dashboard/doctor-dashboard.component.html
@@ -1,1 +1,20 @@
 <p>Doctor-dashboard!</p>
+
+<mat-card>
+    <mat-card-header>
+        <img mat-card-avatar src="/assets/doctor.jpg">
+    </mat-card-header>
+     
+</mat-card>
+
+<mat-tab-group color="primary">
+    <mat-tab label="Time Slot"> 
+        <app-timeslot></app-timeslot>
+    </mat-tab>
+    <mat-tab label="Feedback"> 
+        <app-feedback></app-feedback>
+    </mat-tab>
+    <mat-tab label="Consult Q&A"> 
+        <app-consult></app-consult>
+    </mat-tab>
+  </mat-tab-group>
