--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -5,10 +5,10 @@
 
     <mat-tab label="Verification"> Verification Component to be placed here </mat-tab>
 
-    <mat-tab label="Add Resources"> 
+    <mat-tab label="Add Resources"> <app-warroom-add></app-warroom-add>
         <br>
         <br>
-        <div class="container">
+        <!-- <div class="container">
             <div id="content">
               <div id="main-content">
                 <mat-tab-group >
@@ -25,7 +25,36 @@
                   </mat-tab-group>
               </div>
             </div>
-          </div>
+          </div> -->
+
+
+
+          <!-- <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <mat-tab-group [@.disabled]="true" dynamicHeight>
+                        <mat-tab>
+                            <ng-template mat-tab-label>
+                                Add Beds
+                            </ng-template>
+                            <app-add-bed></app-add-bed>
+                        </mat-tab>
+                        <mat-tab>
+                            <ng-template mat-tab-label>
+                                Add Medicine
+                            </ng-template>
+                            <app-add-medicine></app-add-medicine>
+                        </mat-tab>
+                        <mat-tab>
+                            <ng-template mat-tab-label>
+                                Add Equipments
+                            </ng-template>
+                            <app-add-equipment></app-add-equipment>
+                        </mat-tab>
+                    </mat-tab-group>
+                </div>
+            </div>
+        </div> -->
           
 
         <!-- <mat-tab-group mat-align-tabs="center">
