--- a/product-webapp/webapp/src/app/components/upload-file/upload-file.component.html
+++ b/product-webapp/webapp/src/app/components/upload-file/upload-file.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-sm-9">
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Upload Prescription (.pdf format only)</mat-label>
@@ -14,4 +14,4 @@
     </div>
   </div>
 
-</div>
+</div> -->
