--- a/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
@@ -1,8 +1,41 @@
 <p>close-sos works!</p>
 <h1 style="text-align:center">MEDICAL SOS REQUESTS</h1>
-<button mat-raised-button color="accent"> MEDICINE </button>
-<button mat-raised-button color="accent"> MEDICAL EQUIPMENT </button>
-<button mat-raised-button color="accent"> BEDS </button>
+<div>
+<button mat-raised-button color="accent" class="block"> MEDICINE </button>
+<button mat-raised-button color="accent" class="block"> MEDICAL EQUIPMENT </button>
+<button mat-raised-button color="accent" class="block"> BEDS </button>
+</div>
+<div *ngFor="let obj of closeSos">
+<tr>
+    <td>{{obj.city}}</td>
+    <td>{{obj.patientName}}</td>
+</tr>
+<mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class=""></div>
+      <mat-card-title>REQUIREMENT TITLE HERE</mat-card-title>
+      <mat-card-subtitle>REQUIREMENT TYPE HERE</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{obj.patientName}}<br>
+        {{obj.gender}}<br>
+        {{obj.phoneNo}}<br>
+        {{obj.hospitalised}}<br>
+        {{obj.city}}<br>
+        
+
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>PASS</button>
+      <button mat-button>CLOSE</button>
+      <button mat-raised-button color="accent" class="block" style = "align-self: center ;"> SEARCH FOR RESOURCES </button>
+    </mat-card-actions>
+  </mat-card>
+  
+</div>
+
 <br>
 
 <!-- {{closeSos.patientName}}
