--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -14,6 +14,10 @@
                     <mat-tab label="Verify Bed">
                         <app-verify-bed></app-verify-bed>           
                     </mat-tab>
+
+                    <mat-tab label="Verify Medicine">
+                        <app-verify-medicine></app-verify-medicine>          
+                    </mat-tab>
                 </mat-tab-group>
                 </div>
             </div>
