--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -18,6 +18,10 @@
                     <mat-tab label="Verify Medicine">
                         <app-verify-medicine></app-verify-medicine>          
                     </mat-tab>
+
+                    <mat-tab label="Verify Medical Equipment">
+                        <app-verify-equipments></app-verify-equipments>          
+                    </mat-tab>
                 </mat-tab-group>
                 </div>
             </div>
