Taking latest pull

--- a/product-webapp/webapp/src/app/components/header-tabs/header-tabs.component.html
+++ b/product-webapp/webapp/src/app/components/header-tabs/header-tabs.component.html
@@ -3,6 +3,6 @@
     <app-sos-request></app-sos-request>
   </mat-tab>
   <mat-tab label="Consult a doctor">
-    <p>hello world!</p>
+    <app-patient-dashboard></app-patient-dashboard>
   </mat-tab>
 </mat-tab-group>
