--- a/product-webapp/webapp/src/app/components/verify/verify-bed/verify-bed.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-bed/verify-bed.component.html
@@ -1,36 +1,40 @@
-<p>verify-bed works!</p>
+<mat-card>
 <div class="col-md-6 container center" *ngIf = "bed">
-    <table class="table center table-striped table-hover table-bordered">
-        <thead>
-            <tr>
-                <th>bedType</th>
-                <th>city</th>
-                <th>address</th>
-                <th>contactPerson</th>
-                <th>mobileNumber</th>
-                <th>verificationStatus</th>
-            </tr>
-        </thead>
+    <table class="table center table-borderless">
         <tbody>
             <tr>
+                <th>Bed Type</th>
                 <td>{{bed.bedType}}</td>
-                <td>{{bed.city}}</td>
-                <td>{{bed.address}}</td>
-                <td>{{bed.contactPerson}}</td>
-                <td>{{bed.mobileNumber}}</td>
-                <td>{{bed.verificationStatus}}</td>
-                <!-- <td>
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (change)="check()">
-                </td> -->
             </tr>
 
+            <tr>
+                <th>City</th>
+                <td>{{bed.city}}</td>
+            </tr>
+
+            <tr>
+                <th>Address</th>
+                <td>{{bed.address}}</td>
+            </tr>
+
+            <tr>
+                <th>Contact Person</th>
+                <td>{{bed.contactPerson}}</td>
+            </tr>
+
+            <tr>
+                <th>Mobile Number</th>
+                <td>{{bed.mobileNumber}}</td>
+            </tr>
             
         </tbody>
     </table>
 
-    <button class="btn btn-success" (click)="putVerified()">Verify</button>
-    <button class="btn btn-success" (click)="passOn()">Pass on</button>
+    <button class="btn btn-primary mr-4" (click)="putVerified()">Verify this data</button>
+    <button class="btn btn-primary" (click)="passOn()">Pass on this data</button>
 </div>
+</mat-card>
+
 <div class="col-md-6 container center" *ngIf = "!bed">
     Nothing to verify
 </div>
