--- a/product-webapp/webapp/src/app/components/verify/verify-bed/verify-medicine/verify-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-bed/verify-medicine/verify-medicine.component.html
@@ -1,37 +1,43 @@
-<p>verify-medicine works!</p>
+<mat-card>
 <div class="col-md-6 container center" *ngIf = "med">
-    <table class="table center table-striped table-hover table-bordered">
-        <thead>
-            <tr>
-                <th>bedType</th>
-                <th>city</th>
-                <th>address</th>
-                <th>contactPerson</th>
-                <th>mobileNumber</th>
-                <th>verificationStatus</th>
-            </tr>
-        </thead>
+    <table class="table table-borderless p-4">
         <tbody>
             <tr>
+                <th>Medicine Name</th>
                 <td>{{med.medicineName}}</td>
+            </tr>
+                
+            <tr>
+                <th>City</th>
                 <td>{{med.city}}</td>
-                <td>{{med.pharmacy}}</td>
-                <td>{{med.address}}</td>
-                <td>{{med.contactPerson}}</td>
-                <td>{{med.mobileNumber}}</td>
-                <td>{{med.verificationStatus}}</td>
-                <!-- <td>
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (change)="check()">
-                </td> -->
             </tr>
 
-            
+            <tr>
+                <th>Pharmacy</th>
+                <td>{{med.pharmacy}}</td>
+            </tr>
+
+            <tr>
+                <th>Address</th>
+                <td>{{med.address}}</td>
+            </tr>
+
+            <tr>
+                <th>Contact Person</th>
+                <td>{{med.contactPerson}}</td>
+            </tr>
+
+            <tr>
+                <th>Mobile Number</th>
+                <td>{{med.mobileNumber}}</td>
+            </tr>
         </tbody>
     </table>
 
-    <button class="btn btn-success" (click)="putVerified()">Verify</button>
-    <button class="btn btn-success" (click)="passOn()">Pass on</button>
+    <button class="btn btn-primary ml-8 mr-4" (click)="putVerified()">Verify this data</button>
+    <button class="btn btn-primary" (click)="passOn()">Pass on this data</button>
 </div>
+</mat-card>
 <div class="col-md-6 container center" *ngIf = "!med">
     Nothing to verify
 </div>
