current code for verification

--- a/product-webapp/webapp/src/app/components/verify/verify-equipments/verify-equipments.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-equipments/verify-equipments.component.html
@@ -39,6 +39,8 @@
     </div>
 </mat-card>
 
-<div class="col-md-6 container center" *ngIf = "!Equip">
-    Nothing to verify
-</div>
+<mat-card>
+    <div class="jumbotron" *ngIf = "!Equip">
+        <h1 class="display-4">Nothing to verify</h1>
+    </div>
+</mat-card>
