--- a/product-webapp/webapp/src/app/components/landing-page/landing-page.component.html
+++ b/product-webapp/webapp/src/app/components/landing-page/landing-page.component.html
@@ -11,7 +11,11 @@
   </div> -->
   <div class="container">
       <app-latest-information></app-latest-information>
-  </div>
+  </div><br>
+
+  <div class="container">
+    <app-volunteer-revert></app-volunteer-revert>
+</div>
   <app-grid></app-grid>
 <div class="container">
 
