close sos request

--- a/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
@@ -40,8 +40,10 @@
         {{obj.hospitalised}}<br>
         {{obj.city}}<br>
         
-
       </p>
+      <div *ngFor="let require of obj.requirement">
+        <p>{{require.requirementName}}: {{require.requirementQuantity}}: {{require.unitOfMeasure}}</p>
+      </div> 
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>PASS</button>
