--- a/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
+++ b/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
@@ -8,15 +8,14 @@
             <input type="name" [(ngModel)]="user.equipmentName" placeholder="Equipment Name" name="name" class="form-control" id="equipmentName">
           </div>
           </mat-card>
-<<<<<<< HEAD
 
         <mat-card>
         <div class="form-group">
           <label for="hospital">Hospital:</label>
           <input [(ngModel)]="user.hospital" placeholder="Hospital" name="hospital" class="form-control" id="hospital">
         </div>
-=======
-    
+        </mat-card>
+
           <mat-card>
           <div class="form-group">
             <label for="contactPerson">Contact Person:</label>
@@ -32,7 +31,6 @@
             </mat-error>
             <mat-error *ngIf="mobFormControl.hasError('required')"> Phone Number is required </mat-error>
           </div>
->>>>>>> e460d4bb0e896228621513f4d8d3464b112d017b
         </mat-card>
         <mat-card>
         <div class="form-group">
