--- a/product-webapp/webapp/src/app/components/doctor-dashboard/doctor-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/doctor-dashboard/doctor-dashboard.component.html
@@ -11,6 +11,7 @@
     <mat-tab label="Time Slot"> 
         <app-timeslot></app-timeslot>
         <button mat-button (click)="DoctorOnline(email)">Make me online</button>
+        <button mat-button (click)="DoctorOffline(email)">Make me offline</button>
     </mat-tab>
     <mat-tab label="Feedback"> 
         <app-feedback></app-feedback>
