reload component added

--- a/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
+++ b/product-webapp/webapp/src/app/components/add-bed/add-bed.component.html
@@ -87,7 +87,7 @@
       </div>
     </mat-card> -->
     <mat-card>
-      <button class="btn btn-success" (click)="CreateBed()">Submit</button>
+      <button type = "button" class="btn btn-success" (click)="CreateBed()">Submit</button>
     </mat-card>
     </form>
     </div>
