--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-add-medicine/warroom-add-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-add-medicine/warroom-add-medicine.component.html
@@ -1,1 +1,4 @@
+<!-- <mat-card style="width: 50%; position: absolute; margin-left: 300px; ">
+    <app-add-medicine></app-add-medicine>
+</mat-card> -->
 <app-add-medicine></app-add-medicine>
