--- a/product-webapp/webapp/src/app/components/verify/verify-bed/verify-bed.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-bed/verify-bed.component.html
@@ -35,6 +35,8 @@
 </div>
 </mat-card>
 
-<div class="col-md-6 container center" *ngIf = "!bed">
-    Nothing to verify
-</div>
+<mat-card>
+    <div class="jumbotron" *ngIf = "!bed">
+        <h1 class="display-4">Nothing to verify as of now. Thank you for your selfless support</h1>
+    </div>
+</mat-card>
