--- a/product-webapp/webapp/src/app/components/verify/verify-bed/verify-medicine/verify-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-bed/verify-medicine/verify-medicine.component.html
@@ -38,6 +38,9 @@
     <button class="btn btn-primary" (click)="passOn()">Pass on this data</button>
 </div>
 </mat-card>
-<div class="col-md-6 container center" *ngIf = "!med">
-    Nothing to verify
-</div>
+
+<mat-card>
+    <div class="jumbotron" *ngIf = "!med">
+        <h1 class="display-4">Nothing to verify as of now. Thank you for your selfless support</h1>
+    </div>
+</mat-card>
