UI + login undefined object

--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,6 +1,15 @@
 <h1 style="text-align:center">War Room Dashboard</h1>
 
+
+
+<!-- <nav mat-tab-nav-bar>
+    
+
+    
+</nav> -->
+
 <mat-tab-group mat-align-tabs="center">
+
     <mat-tab label="Medical SOS"> 
         <div>
             <mat-toolbar color="primary">
@@ -19,43 +28,43 @@
                   </mat-action-list>
                 </mat-sidenav>
                 <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
-                    <!-- <button mat-raised-button color="primary" (click)="toggleSidebar()">
-                    Toggle Sidebar
-                    </button> -->
                     <router-outlet></router-outlet>
                 </div>
               </mat-sidenav-container>
             </div>
     </mat-tab>
 
+
+
+
     <mat-tab label="Verification">
-         <app-warroom-verify></app-warroom-verify>
-         <br>
-        <br>
-        <div class="container">
-            <div id="content">
-              <div id="main-content">
-                <mat-tab-group mat-align-tabs="center">
-                    <mat-tab label="Verify Bed">
-                        <app-verify-bed></app-verify-bed>     
-                    </mat-tab>
-
-                    <mat-tab label="Verify Medicine">
-                        <app-verify-medicine></app-verify-medicine>          
-                    </mat-tab>
-
-                    <mat-tab label="Verify Medical Equipment">
-                        <app-verify-equipments></app-verify-equipments>          
-                    </mat-tab>
-                </mat-tab-group>
+        <div>
+            <mat-toolbar color="primary">
+                <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="toggleSidebar()">
+                 <mat-icon>menu</mat-icon>
+               </button>
+               <span>Verification Menu</span>
+               <span class="example-spacer"></span>
+             </mat-toolbar>
+        <mat-sidenav-container>
+            <mat-sidenav style="width: 25%;" mode="side" [opened]="opened">
+                <mat-action-list>
+                    <button mat-list-item routerLink="/war-room-dashboard/ver-medicine" (click)="toggleSidebar()"> Verify Medicine </button>
+                    <button mat-list-item routerLink="/war-room-dashboard/ver-equipment" (click)="toggleSidebar()"> Verify Equipment </button>
+                    <button mat-list-item routerLink="/war-room-dashboard/ver-bed" (click)="toggleSidebar()"> Verify Beds </button>
+                  </mat-action-list>
+                </mat-sidenav>
+                <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
+                    <router-outlet></router-outlet>
                 </div>
+              </mat-sidenav-container>
             </div>
-        </div>
+
+
         
     </mat-tab>
 
     <mat-tab label="Add Resources"> 
-        <!-- <app-warroom-add></app-warroom-add> -->
 
         <div>
             <mat-toolbar color="primary">
@@ -74,13 +83,18 @@
                   </mat-action-list>
                 </mat-sidenav>
                 <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
-                    <!-- <button mat-raised-button color="primary" (click)="toggleSidebar()">
-                    Toggle Sidebar
-                    </button> -->
                     <router-outlet></router-outlet>
                 </div>
               </mat-sidenav-container>
             </div>
+
+            
+    </mat-tab>
+</mat-tab-group>
+
+
+
+
         <!-- <div class="container">
             <div id="content">
               <div id="main-content">
@@ -130,6 +144,4 @@
         </div> -->
           
         
-    </mat-tab>
-  </mat-tab-group>
 
