--- a/product-webapp/webapp/src/app/components/landing-page/grid/grid.component.css
+++ b/product-webapp/webapp/src/app/components/landing-page/grid/grid.component.css
@@ -1,7 +1,7 @@
-.mat-grid-tile .mat-figure {
+/* .mat-grid-tile .mat-figure {
     justify-content: flex-start !important ;
     align-items: flex-start !important;
- }
+ } */
 
  .Container mat-grid-list{ /* You Can Name it what you want*/
     margin-right:16px;
