--- a/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.html
+++ b/product-webapp/webapp/src/app/components/volunteer-registration/volunteer-registration.component.html
@@ -1,37 +1,4 @@
 
-<!-- <br><div class="container">
-  <h2 align="center">Join Kawach!</h2>
-  <p align = "center">As a volunteer</p>
-
-<form>
-    <div class="form-group">
-      <label for="emailId">Email ID:</label>
-      <input [(ngModel)]="user.emailId" placeholder="Email id" name="emailId" class="form-control" id="emailId">
-    </div>
-
-    <div class="form-group">
-      <label for="name">Full Name:</label>
-      <input type="name" [(ngModel)]="user.fullName" placeholder="Full name" name="name" class="form-control" id="name">
-    </div>
-
-    <div class="form-group">
-      <label for="phNo">Phone Number:</label>
-      <input [(ngModel)]="user.phoneNumber" placeholder="Phone number" name="phNo" class="form-control" id="phNo">
-    </div>
-
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input [(ngModel)]="user.password" placeholder="Password" name="password" class="form-control" id="password">
-    </div><br>
-    
-    <p align = "center"><button class="btn btn-success" (click)="createVolunteer()">Register</button></p>
-  </form>
-  </div> -->
-
-  <!-- <div class="example-container">
-    
-
-  </div> -->
 
   <body>
     <form [formGroup]="profileForm" class="form-container">
@@ -62,7 +29,7 @@
 
         <mat-form-field appearance="outline" style="width: 300px;">
           <mat-label>Password</mat-label>
-          <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" placeholder="Include special characters" required [(ngModel)]="user.password">
+          <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" placeholder="password" required [(ngModel)]="user.password">
           <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           <mat-error *ngIf="profileForm.get('password')?.invalid && profileForm.get('password')?.touched">Required Field</mat-error>
         </mat-form-field><br>
