--- a/product-webapp/webapp/src/app/components/patient-dashboard/doctor-cards/doctor-cards.component.html
+++ b/product-webapp/webapp/src/app/components/patient-dashboard/doctor-cards/doctor-cards.component.html
@@ -1,16 +1,21 @@
 <div fxLayout="row wrap">
-  <div fxFlex="30%" >
+  <div fxFlex="30%" *ngFor="let doc of doctorDetails">
     <div class="col-md-6">
       <div>
-        <img class='img-responsive' src='https://i.stack.imgur.com/l60Hf.png' alt = "Image is not there"
-      Width = "200" height="100">
+        <!-- <img class='img-responsive' src={{doc.imageByte}} alt = "Image Not Found"
+      Width = "200" height="100"> -->
+      <img
+            Width="200" height="100"
+            src="data:image/png;base64,{{ doc.imageByte }}"
+            alt="Card image cap"
+          />
       </div>
     </div>
     <div class="col-md-6">
         <mat-card class="example-card" style="margin-bottom: 10px; width: 200px;">
             <mat-card-header>
-                <mat-card-title>{{doctorM.fullName}}</mat-card-title>
-                <mat-card-subtitle>{{doctorM.specialization}}</mat-card-subtitle>
+                <mat-card-title>{{doc.fullName}}</mat-card-title>
+                <mat-card-subtitle>{{doc.specialization}}</mat-card-subtitle>
             </mat-card-header>
             <button mat-flat-button color="primary" style="margin-right: 10px">Chat</button>
             <button mat-flat-button color="primary">Connect</button>
