front end renderring for Equipment and Bed SOS

--- a/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
+++ b/product-webapp/webapp/src/app/components/close-sos/close-sos.component.html
@@ -87,8 +87,9 @@
           </tbody>
       </table>
   
-      <!-- <button class="btn btn-primary mr-4" (click)="putVerified()">Verify this data</button>
-      <button class="btn btn-primary" (click)="passOn()">Pass on this data</button> -->
+      <button class="" (click)="close()">Close</button>
+      <button class="" (click)="pass()">Pass</button>
+      <button class="" (click)="search()">Search for Medicines</button>
   </div>
   </mat-card>
   
