--- a/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
+++ b/product-webapp/webapp/src/app/components/add-equipment/add-equipment.component.html
@@ -45,7 +45,7 @@
         </div>
         </mat-card>
 
-        <mat-card>
+        <!-- <mat-card>
         <div class="form-group">
           <label for="contactPerson">Contact Person:</label>
           <input type="name" [(ngModel)]="user.contactPerson" placeholder="Contact Person" name="contactPerson" class="form-control" id="contactPerson">
@@ -60,7 +60,7 @@
           </mat-error>
           <mat-error *ngIf="mobFormControl.hasError('required')"> Phone Number is required </mat-error>
         </div>
-      </mat-card>
+      </mat-card> -->
         <mat-card>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (change)="check()">
