--- a/product-webapp/webapp/src/app/components/verify/verify-bed/verify-bed.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-bed/verify-bed.component.html
@@ -1,5 +1,5 @@
-<mat-card>
-<div class="col-md-6 container center" *ngIf = "bed">
+<mat-card *ngIf = "bed">
+<div class="col-md-6 container center" >
     <table class="table center table-borderless">
         <tbody>
             <tr>
@@ -35,6 +35,4 @@
 </div>
 </mat-card>
 
-<div class="col-md-6 container center" *ngIf = "!bed">
-    Nothing to verify
-</div>
+<mat-card *ngIf = "!bed">Nothing to verify!!</mat-card>
