--- a/product-webapp/webapp/src/app/components/verify/verify-bed/verify-medicine/verify-medicine.component.html
+++ b/product-webapp/webapp/src/app/components/verify/verify-bed/verify-medicine/verify-medicine.component.html
@@ -1,5 +1,5 @@
-<mat-card>
-<div class="col-md-6 container center" *ngIf = "med">
+<mat-card *ngIf = "med">
+<div class="col-md-6 container center">
     <table class="table table-borderless p-4">
         <tbody>
             <tr>
@@ -38,6 +38,7 @@
     <button class="btn btn-primary" (click)="passOn()">Pass on this data</button>
 </div>
 </mat-card>
-<div class="col-md-6 container center" *ngIf = "!med">
+<!-- <div class="col-md-6 container center" *ngIf = "!med">
     Nothing to verify
-</div>
+</div> -->
+<mat-card *ngIf = "!med">Nothing to verify!!</mat-card>
