--- a/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
+++ b/product-webapp/webapp/src/app/components/warroom-dashboard/warroom-dashboard.component.html
@@ -1,44 +1,35 @@
 <h1 style="text-align:center">War Room Dashboard</h1>
 
-
-
-<!-- <nav mat-tab-nav-bar>
-    
-
-    
-</nav> -->
-
 <mat-tab-group mat-align-tabs="center">
+  <mat-tab label="Medical SOS">
+    <div>
+      <mat-toolbar color="primary">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+          (click)="toggleSidebar()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>SOS Menu</span>
+        <span class="example-spacer"></span>
+      </mat-toolbar>
+      <mat-sidenav-container>
+        <mat-sidenav style="width: 25%;" mode="side" [opened]="opened">
+          <mat-action-list>
+            <button mat-list-item routerLink="/war-room-dashboard/sosmedicine" (click)="toggleSidebar()"> SOS Medicine
+            </button>
+            <button mat-list-item routerLink="/war-room-dashboard/sosequipment" (click)="toggleSidebar()"> SOS Equipment
+            </button>
+            <button mat-list-item routerLink="/war-room-dashboard/sosbed" (click)="toggleSidebar()"> SOS Beds </button>
+          </mat-action-list>
+        </mat-sidenav>
+        <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
+          <router-outlet></router-outlet>
+        </div>
+      </mat-sidenav-container>
+    </div>
+  </mat-tab>
 
-    <mat-tab label="Medical SOS"> 
-        <div>
-            <mat-toolbar color="primary">
-                <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="toggleSidebar()">
-                 <mat-icon>menu</mat-icon>
-               </button>
-               <span>SOS Menu</span>
-               <span class="example-spacer"></span>
-             </mat-toolbar>
-        <mat-sidenav-container>
-            <mat-sidenav style="width: 25%;" mode="side" [opened]="opened">
-                <mat-action-list>
-                    <button mat-list-item routerLink="/war-room-dashboard/sosmedicine" (click)="toggleSidebar()"> SOS Medicine </button>
-                    <button mat-list-item routerLink="/war-room-dashboard/sosequipment" (click)="toggleSidebar()"> SOS Equipment </button>
-                    <button mat-list-item routerLink="/war-room-dashboard/sosbed" (click)="toggleSidebar()"> SOS Beds </button>
-                  </mat-action-list>
-                </mat-sidenav>
-                <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
-                    <router-outlet></router-outlet>
-                </div>
-              </mat-sidenav-container>
-            </div>
-    </mat-tab>
-
-
-
-
-    <mat-tab label="Verification">
-        <div>
+  <mat-tab label="Verification">
+    <!-- <div>
             <mat-toolbar color="primary">
                 <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="toggleSidebar()">
                  <mat-icon>menu</mat-icon>
@@ -58,44 +49,57 @@
                     <router-outlet></router-outlet>
                 </div>
               </mat-sidenav-container>
-            </div>
+            </div> -->
+    <div fxLayout="row" fxLayoutAlign="space-around center">
+      <div fxLayout="column" fxLayoutAlign="space-around stretch" fxFlex="20">
+        <button mat-raised-button [ngClass]="{'nav-button-active':verifyMedicine, 'nav-button-inactive':!verifyMedicine}" (click)="verMed()">
+          Verify Medicine </button>
+        <button mat-raised-button [ngClass]="{'nav-button-active':verifyEquipment, 'nav-button-inactive':!verifyEquipment}" (click)="verEquip()">
+          Verify Equipment </button>
+        <button mat-raised-button [ngClass]="{'nav-button-active':verifyBed, 'nav-button-inactive':!verifyBed}" (click)="verBed()">
+          Verify Beds </button>
+      </div>
+      <div fxFlex="80">
+        <app-verify-equipments *ngIf="verifyEquipment"></app-verify-equipments>
+        <app-verify-medicine *ngIf="verifyMedicine"></app-verify-medicine>
+        <app-verify-bed *ngIf="verifyBed"></app-verify-bed>
+      </div>
+    </div>
+  </mat-tab>
 
+  <mat-tab label="Add Resources">
 
-        
-    </mat-tab>
-
-    <mat-tab label="Add Resources"> 
-
-        <div>
-            <mat-toolbar color="primary">
-                <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="toggleSidebar()">
-                 <mat-icon>menu</mat-icon>
-               </button>
-               <span>Resources</span>
-               <span class="example-spacer"></span>
-             </mat-toolbar>
-        <mat-sidenav-container>
-            <mat-sidenav style="width: 25%;" mode="side" [opened]="opened">
-                <mat-action-list>
-                    <button mat-list-item routerLink="/war-room-dashboard/addmedicine" (click)="toggleSidebar()"> Add Medicine </button>
-                    <button mat-list-item routerLink="/war-room-dashboard/addequipment" (click)="toggleSidebar()"> Add Equipment </button>
-                    <button mat-list-item routerLink="/war-room-dashboard/addbed" (click)="toggleSidebar()"> Add Beds </button>
-                  </mat-action-list>
-                </mat-sidenav>
-                <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
-                    <router-outlet></router-outlet>
-                </div>
-              </mat-sidenav-container>
-            </div>
-
-            
-    </mat-tab>
+    <div>
+      <mat-toolbar color="primary">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+          (click)="toggleSidebar()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Resources</span>
+        <span class="example-spacer"></span>
+      </mat-toolbar>
+      <mat-sidenav-container>
+        <mat-sidenav style="width: 25%;" mode="side" [opened]="opened">
+          <mat-action-list>
+            <button mat-list-item routerLink="/war-room-dashboard/addmedicine" (click)="toggleSidebar()"> Add Medicine
+            </button>
+            <button mat-list-item routerLink="/war-room-dashboard/addequipment" (click)="toggleSidebar()"> Add Equipment
+            </button>
+            <button mat-list-item routerLink="/war-room-dashboard/addbed" (click)="toggleSidebar()"> Add Beds </button>
+          </mat-action-list>
+        </mat-sidenav>
+        <div mat-sidenav-content style="height: 90vh; margin-left: 35px; align-items: center;">
+          <router-outlet></router-outlet>
+        </div>
+      </mat-sidenav-container>
+    </div>
+  </mat-tab>
 </mat-tab-group>
 
 
 
 
-        <!-- <div class="container">
+<!-- <div class="container">
             <div id="content">
               <div id="main-content">
                 <mat-tab-group mat-align-tabs="center">
@@ -116,7 +120,7 @@
 
 
 
-          <!-- <div class="container-fluid">
+<!-- <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <mat-tab-group [@.disabled]="true" dynamicHeight>
@@ -142,6 +146,3 @@
                 </div>
             </div>
         </div> -->
-          
-        
-
